# egui_sdl2_gl

./: .gitignore  Cargo.toml  LICENSE  README.md  changelog.md
.github/workflows/: ci.yaml  main.yaml
examples/: basic.rs  demo_lib.rs  example.rs
examples/example/: main.rs  triangle.rs
examples/mix/: main.rs  triangle.rs
examples/triangle/: triangle.rs
shaders/: adaptive.frag  adaptive.vert  default.frag
src/: clipboard.rs  gl.rs  gl_utils.rs  lib.rs  misc_util.rs  painter.rs  shader_version.rs  vao.rs
src/shader/: default.vert
